upgrading platform